--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.5.9",
+    "cross-env": "^7.0.3"
+  },
+  "resolutions": { "mini-css-extract-plugin": "2.4.7" }
 }
