Replaced js worker with rust code

--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   "devDependencies": {
     "@tauri-apps/api": "^1.5.3",
     "@tauri-apps/cli": "^1.5.9",
-    "cross-env": "^7.0.3",
-    "worker-loader": "^3.0.8"
+    "cross-env": "^7.0.3"
   },
   "resolutions": {
     "mini-css-extract-plugin": "2.4.7"
