--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,8 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4", features = [ "shell-all", "fs-all", "path-all", "dialog-all", "window-start-dragging", "window-close", "window-minimize"] }
+tokio = { version = "1", features = ["full"] }
+tauri = { version = "1.5.4", features = [ "window-print", "shell-all", "fs-all", "path-all", "dialog-all", "window-start-dragging", "window-close", "window-minimize"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
