--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,10 +15,10 @@ rust-version = "1.60"
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-tauri = { version = "1.5.4", features = [ "window-print", "shell-all", "fs-all", "path-all", "dialog-all", "window-start-dragging", "window-close", "window-minimize"] }
+tauri = { version = "1.6.0", features = [ "fs-read-file", "fs-write-file", "dialog-open", "fs-remove-file", "shell-sidecar", "window-print", "path-all", "window-start-dragging", "window-close", "window-minimize"] }
+serde_json = "1.0.114"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
