--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,9 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-tauri = { version = "1.6.0", features = [ "http-all", "fs-read-file", "fs-write-file", "dialog-open", "fs-remove-file", "shell-sidecar", "window-print", "path-all", "window-start-dragging", "window-close", "window-minimize"] }
+tauri = { version = "1.6.0", features = [ "shell-all", "http-all", "fs-read-file", "fs-write-file", "dialog-open", "fs-remove-file", "window-print", "path-all", "window-start-dragging", "window-close", "window-minimize"] }
 serde_json = "1.0.114"
+zip-extract = "0.1.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
