--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-build = { version = "1.5.1", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tauri = { version = "1.6.0", features = [ "shell-all", "http-all", "fs-read-file", "fs-write-file", "dialog-open", "fs-remove-file", "window-print", "path-all", "window-start-dragging", "window-close", "window-minimize"] }
+reqwest = { version = "0.11", features = ["blocking"] }
 serde_json = "1.0.114"
 zip-extract = "0.1.3"
 
