--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri = { version = "1.6.0", features = [ "shell-all", "http-all", "fs-read-file
 reqwest = { version = "0.11", features = ["blocking"] }
 serde_json = "1.0.114"
 zip-extract = "0.1.3"
+scraper = "0.19.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
