--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "MangaDownloader"
+version = "1.0.0"
+description = "An app to download manga"
+authors = ["YofaGh"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "MangaDownloader"
 edition = "2021"
 rust-version = "1.60"
 
