--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,26 +1,25 @@
 [package]
-name = "MangaDownloader"
+name = "mangadownloader"
 version = "1.0.0"
 description = "An app to download manga"
 authors = ["YofaGh"]
 license = ""
 repository = ""
-default-run = "MangaDownloader"
+default-run = "mangadownloader"
 edition = "2021"
 rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-tauri = { version = "1.6.0", features = [ "dialog-open", "http-all", "fs-read-file", "fs-write-file", "fs-remove-file", "window-print", "path-all", "window-start-dragging", "window-close", "window-minimize"] }
-reqwest = { version = "0.11", features = ["blocking", "multipart"] }
+tauri = { version = "2.0.0-beta", features = [] }
+reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }
 serde_json = "1.0.114"
-zip-extract = "0.1.3"
 scraper = "0.19.0"
 select = "0.6.0"
 tokio-util = { version = "0.7", features = ["codec", "io"] }
@@ -30,9 +29,16 @@ rayon = "1.10.0"
 scannedpdf = "0.1.0"
 base64 = "0.22.1"
 natord = "1.0.9"
+tauri-plugin-dialog = "2.0.0-beta.7"
+tauri-plugin-fs = "2.0.0-beta.7"
+tauri-plugin-http = "2.0.0-beta.7"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
+
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib", "lib"]
