--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,16 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tauri = { version = "2.0.0-beta", features = [] }
-reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }
+reqwest = { version = "0.12", default-features = false, features = [
+    "blocking",
+    "multipart",
+    "json",
+    "stream",
+    "rustls-tls",
+    "charset",
+    "http2",
+    "macos-system-configuration",
+] }
 serde_json = "1.0.114"
 scraper = "0.19.0"
 tokio-util = { version = "0.7", features = ["codec", "io"] }
@@ -36,7 +45,7 @@ tauri-plugin-http = "2.0.0-beta.7"
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
 
 [lib]
 name = "app_lib"
