--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ natord = "1.0.9"
 tauri-plugin-dialog = "2.0.0-beta.7"
 tauri-plugin-fs = "2.0.0-beta.7"
 tauri-plugin-http = "2.0.0-beta.7"
+async-trait = "0.1.80"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
