--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tauri = { version = "2.0.0-beta", features = [] }
 reqwest = { version = "0.12", default-features = false, features = [
-    "blocking",
     "multipart",
     "json",
     "stream",
@@ -41,6 +40,7 @@ tauri-plugin-dialog = "2.0.0-beta.7"
 tauri-plugin-fs = "2.0.0-beta.7"
 tauri-plugin-http = "2.0.0-beta.7"
 async-trait = "0.1.80"
+chrono = "0.4.38"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
