--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,12 +12,12 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-rc.0", features = [] }
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
-tauri = { version = "2.0.0-beta", features = [] }
+tauri = { version = "2.0.0-rc.0", features = [] }
 reqwest = { version = "0.12", default-features = false, features = [
     "multipart",
     "json",
@@ -36,9 +36,9 @@ rayon = "1.10.0"
 scannedpdf = "0.1.0"
 base64 = "0.22.1"
 natord = "1.0.9"
-tauri-plugin-dialog = "2.0.0-beta.7"
-tauri-plugin-fs = "2.0.0-beta.7"
-tauri-plugin-http = "2.0.0-beta.7"
+tauri-plugin-dialog = "2.0.0-rc.0"
+tauri-plugin-fs = "2.0.0-rc.0"
+tauri-plugin-http = "2.0.0-rc.0"
 async-trait = "0.1.80"
 chrono = "0.4.38"
 
