--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,7 @@ tauri-plugin-fs = "2.0.0-rc.0"
 tauri-plugin-http = "2.0.0-rc.0"
 async-trait = "0.1.80"
 chrono = "0.4.38"
+select = "0.6.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
