--- a/src-tauri/modules/Cargo.toml
+++ b/src-tauri/modules/Cargo.toml
@@ -8,7 +8,7 @@ license = ""
 repository = ""
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [profile.release]
 opt-level = 'z'
@@ -28,4 +28,3 @@ futures = "0.3"
 async-trait = "0.1.80"
 chrono = "0.4.38"
 indexmap = { version = "2.5.0", features = ["serde"] }
-libc = "0.2"
