Fixed a bug in image_merger

--- a/src-tauri/modules/Cargo.toml
+++ b/src-tauri/modules/Cargo.toml
@@ -8,7 +8,7 @@ license = ""
 repository = ""
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 opt-level = 'z'
