--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ select = "0.6.0"
 indexmap = { version = "1.9.3", features = ["serde"] }
 libloading = "0.8.5"
 semver = "1.0.23"
+lazy_static = "1.5.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
