--- a/src-tauri/modules/Cargo.toml
+++ b/src-tauri/modules/Cargo.toml
@@ -6,16 +6,10 @@ description = "modules for Manga Downloader"
 authors = ["YofaGh"]
 license = ""
 repository = ""
+rust-version = "1.83"
 
 [lib]
 crate-type = ["cdylib"]
-
-[profile.release]
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = 'abort'
-strip = true
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
