--- a/src-tauri/modules/Cargo.toml
+++ b/src-tauri/modules/Cargo.toml
@@ -12,7 +12,12 @@ rust-version = "1.83"
 crate-type = ["cdylib"]
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+    "stream",
+    "multipart",
+] }
 select = "0.6.0"
 base64 = "0.22.1"
 serde_json = "1.0.116"
